--- a/Dockerfile.wheels
+++ b/Dockerfile.wheels
@@ -28,6 +28,7 @@ RUN apt update && apt upgrade -y \
     python3 python3-pip python3-dev vim curl git wget jq \
     libcudnn9-cuda-13 \
     libnccl-dev libnccl2 libibverbs1 libibverbs-dev rdma-core \
+    libxcb1 \
     && rm -rf /var/lib/apt/lists/* \
     && pip install uv
 
