Added recipes for nemotron-nano-3 and qwen3-coder-next

--- a/recipes/minimax-m2-awq.yaml
+++ b/recipes/minimax-m2-awq.yaml
@@ -11,6 +11,9 @@ model: QuantTrio/MiniMax-M2-AWQ
 # Container image to use
 container: vllm-node
 
+# Can only be run in a cluster
+cluster_only: true
+
 # No mods required
 mods: []
 
