--- a/recipes/nemotron-3-nano-nvfp4.yaml
+++ b/recipes/nemotron-3-nano-nvfp4.yaml
@@ -32,6 +32,16 @@ env:
   VLLM_USE_FLASHINFER_MOE_FP4: 1
   VLLM_FLASHINFER_MOE_BACKEND: "throughput"
 
+# Optional benchmarking (run after successful launch)
+benchmark:
+  enabled: false
+  framework: llama-benchy
+  args:
+    pp: [2048]
+    depth: [0, 4096, 8192, 16384, 32768, 65535, 100000]
+    enable_prefix_caching: true
+    save_result: benchmark_NVIDIA-Nemotron-3-Nano-30B-A3B-NVFP4.md
+
 # The vLLM serve command template
 command: |
   vllm serve nvidia/NVIDIA-Nemotron-3-Nano-30B-A3B-NVFP4  \
