--- a/recipes/nemotron-3-nano-nvfp4.yaml
+++ b/recipes/nemotron-3-nano-nvfp4.yaml
@@ -40,7 +40,7 @@ benchmark:
     pp: [2048]
     depth: [0, 4096, 8192, 16384, 32768, 65535, 100000]
     enable_prefix_caching: true
-    save_result: benchmark_NVIDIA-Nemotron-3-Nano-30B-A3B-NVFP4.md
+    save_result: benchmark_NVIDIA-Nemotron-3-Nano-30B-A3B-NVFP4.csv
 
 # The vLLM serve command template
 command: |
